--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=wanderfun
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/wanderfun_db
-spring.datasource.username=admin
+spring.datasource.username=root
 spring.datasource.password=12345678
 
 # JPA Configuration
