--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
 			<version>3.4.0</version>
 			<type>pom</type>
 		</dependency>
+
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http5</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
