--- a/infrastructure-layer/src/main/resources/application.properties
+++ b/infrastructure-layer/src/main/resources/application.properties
@@ -6,6 +6,14 @@ spring.datasource.username=root
 spring.datasource.password=12345678
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.url=jdbc:mysql://localhost:3306/wanderfun_db
+spring.flyway.user=root
+spring.flyway.password=12345678
