--- a/infrastructure-layer/src/main/resources/application.properties
+++ b/infrastructure-layer/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.password=12345678
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Flyway Configuration
 spring.flyway.enabled=true
