--- a/infrastructure-layer/src/main/resources/application.properties
+++ b/infrastructure-layer/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.url=jdbc:mysql://localhost:3306/wanderfun_db
 spring.flyway.user=root
 spring.flyway.password=12345678
+
+# Timezone Configuration
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
