change auth controller

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<module>application-layer</module>
 		<module>presentation-layer</module>
 		<module>infrastructure-layer</module>
+		<module>demo</module>
 	</modules>
 
 </project>
